embeddedSearch API: Expose static functions

This makes sure they can be called after being assigned to a var, like
var f = chrome.embeddedSearch.searchBox.startCapturingKeyStrokes;
f();

This was the case when the API was implemented as a v8::Extension, but
got broken when it was converted to Gin in crrev.com/c/700443.

Bug: 776660, 776655
Change-Id: Idab6a6e960ff614c80f74b3acdadede7bf9af9d0
Reviewed-on: https://chromium-review.googlesource.com/730186
Reviewed-by: Jochen Eisinger <jochen@chromium.org>
Commit-Queue: Marc Treib <treib@chromium.org>
Cr-Commit-Position: refs/heads/master@{#510401}
Former-commit-id: 453cdca9a87018ae26b911899beb6394eaa17ecd